# openml-pytorch

./: .gitignore  404.html  Dockerfile  LICENSE.md  README.md  changelog.md  create_new_task.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytorch_IndoorScenes_classification.py  pytorch_image_classification.py  pytorch_image_classification_example.py  pytorch_pretrained_image_classification_example.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_colab.in  requirements_colab.txt  setup.py  test_new_dataloader.ipynb  test_new_dataloader.py
.github/workflows/: ci.yml  python-package.yml
API reference/Callbacks/: index.html
API reference/Custom Datasets/: index.html
API reference/Metrics/: index.html
API reference/OpenML Connection/: index.html
API reference/Trainer/: index.html
Examples/: index.html
Examples/Create Dataset and Task/: index.html
Examples/Getting data from OpenML/: index.html
Examples/Image Classification Task/: index.html
Examples/Pretrained Transformer Image Classification Task/: index.html
Examples/Sequential Classification Task/: index.html
Examples/Tabular Classification/: index.html
Examples/Upload results to OpenML/: index.html
Integrations of OpenML in PyTorch/: index.html
Limitations of the API/: index.html
Philosophy behind the API Design/: index.html
docs/: Integrations of OpenML in PyTorch.md  Limitations of the API.md  index.md
docs/API reference/: Callbacks.md  Custom Datasets.md  Metrics.md  OpenML Connection.md
docs/Examples/: Choose a Custom Optimizer.ipynb  Create Dataset and Task.ipynb  Getting data from OpenML.ipynb  Image Classification Task.ipynb  Load Data from OpenML.ipynb  Pretrained Transformer Image Classification Task.ipynb  Sequential Classification Task.ipynb  Tabular Classification.ipynb  Upload results to OpenML.ipynb  index.md
examples/: create_new_task.py  pytorch_IndoorScenes_classification.py  pytorch_image_classification_example.py  pytorch_pretrained_image_classification_example.py  pytorch_sequential_classification_model.py  pytorch_sequential_regression_model.py
openml_pytorch/: __init__.py  callbacks.py  config.py  custom_datasets.py  data.py  extension.py  metrics.py  run_utils.py  trainer copy.py  trainer.py
openml_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openml_pytorch/callbacks/: __init__.py  annealing.py  callback.py  device_callbacks.py  helper.py  recording.py  tensorboard.py  training_callbacks.py
openml_pytorch/custom_datasets/: __init__.py  generic_dataset.py  image_dataset.py  tabular_dataset.py
openml_pytorch/layers/: __init__.py
search/: search_index.json
tabular_data_examples/: pytorch_sequential_classification_model.py
test/CallbackTests/: test_annealer.py  test_helper.py  test_put_data_on_device.py  test_recording.py  test_tensorboard.py  test_training_callbacks.py
test/DatasetTests/: test_docker_setup.py  test_image_dataset.py  test_tabular_dataset.py
test/PipelineTests/: test_image_classification.py  test_sequential_classification.py  test_tabular_classification.py
test/TrainerTests/: test_adding_files_to_run.py  test_basic_trainer.py  test_config_generator.py  test_convert_to_rgb.py  test_custom_pipelines.py  test_data_container.py  test_data_handler.py  test_data_module.py  test_image_classification.py  test_learner.py  test_sequential_classification.py  test_tabular_classification.py  test_training_model.py
testing_examples/: test_new_dataloader.ipynb
tests/CallbackTests/: test_helper.py  test_put_data_on_device.py  (+1 more)
(+23 files in other folders)
