[project]
name = "openml-pytorch"
version = "0.1.7"
description = "Pytorch extension for OpenML"
authors = [
    {name = "SubhadityaMukherjee", email = "msubhaditya@gmail.com"},
    {name = "Taniya Das", email = "t.das@tue.nl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "liac-arff>=2.4.0",
  "minio",
  "numpy>=1.6.2",
  "packaging",
  "pandas>=1.0.0",
  "pyarrow",
  "python-dateutil",  # Installed through pandas anyway.
  "requests",
  "scikit-learn>=0.18",
  "scipy>=0.13.3",
  "tqdm",  # For MinIO download progress bars
  "xmltodict",
  "torch>=2.2.0",
  "torchvision>=0.20.0",
  "onnx>=1.17.0",
  "matplotlib>3.10",
  "openml>=0.15.1",
  "netron>=8.2.1",
  "tqdm>=4.67.1",
  "tensorboard>=2.18.0",
]

[tool.poetry.group.dev.dependencies]
netron = "^8.2.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
