[project]
name = "openml-pytorch"
version = "0.1.8"
description = "Pytorch extension for OpenML"
authors = [
    {name = "SubhadityaMukherjee", email = "msubhaditya@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "netron>=8.9.0",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "openml>=0.15.1",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
